--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -115,6 +115,7 @@ jobs:
         working-directory: redmine
         run: |
           bundle exec rake generate_secret_token
+          bundle exec rake db:schema:dump
 
       - name: Run tests
         env:
