--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,7 @@
 require:
   - rubocop-performance
   - rubocop-rails
+  - rubocop-minitest
 
 AllCops:
   TargetRubyVersion: 2.7
@@ -13,6 +14,13 @@ AllCops:
 
 Rails:
   Enabled: true
+
+Minitest/MultipleAssertions:
+  Max: 15
+  Enabled: true
+
+Minitest/AssertPredicate:
+  Enabled: false
 
 Metrics/AbcSize:
   Enabled: false
@@ -74,6 +82,8 @@ Style/AutoResourceCleanup:
 
 Style/ExpandPathArguments:
   Enabled: true
+  Exclude:
+    - test/**/*
 
 Style/OptionHash:
   Enabled: true
